--- a/style.css
+++ b/style.css
@@ -3,9 +3,21 @@ body {
     background-color: #D0DDD7;
 }
 
+/* Titles */
+
 h1, h2, h3 {
     font-family: 'Cormorant Infant', serif;
 }
+
+h1, h2 {
+    padding: 20px;
+}
+
+h1 {
+    font-size: 2.4rem;
+}
+
+/* Navigation bar*/
 
 nav {
     background-color: #594E36;
@@ -32,19 +44,28 @@ nav {
     display: none;
 }
 
-#presentation {
-    margin: 5px;
+/*Articles and ads*/
+
+article {
     margin-top: 20px;
-    padding: 5px;
+    padding: 10px;
     background: rgb(255, 255, 255, 0.4);
 }
 
-#presentationTitle {
-    padding: 20px;
+aside {
+    margin-top: 20px;
 }
+
+#adEvent {
+    height: 530px;
+    width: 350px;
+}
+
+/*Cards*/
 
 .card {
     margin-top: 20px;
+    border-radius: 10px;
 }
 
 .card-text {
@@ -55,6 +76,9 @@ nav {
 .cardButton {
     background: #A5AE9E;
 }
+
+
+/*Footer*/
 
 footer {
     background: #594E36;
@@ -105,6 +129,8 @@ h4 {
     margin-bottom: 0px;
 }
 
+/*large screen settings*/
+
 @media screen and (min-width: 720px){
     nav {
         font-size: 1.3em;
@@ -117,8 +143,24 @@ h4 {
         margin-right: 20px;
     }
 
-    h2 {
-        font-size: 3em;
+    h1{
+        font-size: 3rem;
     }
 
+    h2 {
+        font-size: 2.5rem;
+   }
+
+    #pdfDoc {
+        width: 715px;
+        height: 404px;
+    }
+
+    #meetTheClub video {
+        width: 715px;
+    }
+
+    #imgCard {
+        height: 350px;
+    }
 }
