--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
+html {
+    padding: 0;
+}
+
 body {
     font-family: 'Overpass', sans-serif;
     background-color: #D0DDD7;
+}
+
+.container-fluid{
+    padding: 0;
 }
 
 /* Titles */
@@ -18,6 +26,7 @@ nav {
 .navbar-brand {
     font-family: 'Alegreya', serif;
     font-size: 1.5em;
+    margin-left: 50px;
 }
 
 #logoHeader {
@@ -43,14 +52,18 @@ article {
 }
 
 #eventAd {
-    height: auto;
-    width: 90%;
+    max-height: 800px;
 }
 
 /*Cards*/
 
+#cards {
+    padding: 0 150px;
+}
+
 .card {
     border-radius: 10px;
+    max-width : 500px;
 }
 
 .cardButton {
@@ -77,6 +90,8 @@ label {
 footer {
     background: #594E36;
     color:white;
+    width: 100%;
+    margin-top: 150px;
 }
 
 footer a {
